fix 403 do loop path //